--- a/Empresa.Compras.Web/Empresa.Compras.Web.csproj
+++ b/Empresa.Compras.Web/Empresa.Compras.Web.csproj
@@ -175,6 +175,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jQueryFixes.js" />
+    <Content Include="Scripts\Mascara.js" />
+    <Content Include="Scripts\methods_pt.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -208,6 +211,7 @@
     <Content Include="Views\Propostas\Create.cshtml" />
     <Content Include="Views\Propostas\Edit.cshtml" />
     <Content Include="Views\Propostas\Confirmacao.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
