--- a/Empresa.Compras.Api/packages.config
+++ b/Empresa.Compras.Api/packages.config
@@ -11,9 +11,13 @@
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net471" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net471" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net471" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net471" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net471" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net471" />
 </packages>
