exclusão de mcv home e ajustes nos controlers

--- a/Empresa.Compras.Web/Web.config
+++ b/Empresa.Compras.Web/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="prazoExpiracaoPropostas" value="30" />
+    <add key="UriApi" value="http://localhost:5677" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
